// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartLink /> should NOT render quantity if cart is null 1`] = `
<DocumentFragment>
  <a
    class="sc-gsTCUz khJLZs"
    data-testid="CartLink"
  >
    <div
      class="sc-bdfBwQ gtikZV"
      color=""
    >
      <svg>
        cart.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`<CartLink /> should NOT render quantity if cart length is 0 1`] = `
<DocumentFragment>
  <a
    class="sc-gsTCUz khJLZs"
    data-testid="CartLink"
  >
    <div
      class="sc-bdfBwQ gtikZV"
      color=""
    >
      <svg>
        cart.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`<CartLink /> should render everything correctly with quantity 1 1`] = `
<DocumentFragment>
  <a
    class="sc-gsTCUz khJLZs"
    data-testid="CartLink"
  >
    <div
      class="sc-dlfnbm cVfIFS"
      data-testid="CartLink-quantity"
    >
      1
    </div>
    <div
      class="sc-bdfBwQ gtikZV"
      color=""
    >
      <svg>
        cart.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;
